--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj01.png\" width=800>"
+    "<img src=\".\\ref\\mini_pj01.png\" width=800>"
    ]
   },
   {
