edit 181222_MiniProject_Crawling.ipynb edit img src line in params (before[A) './path/filename width=size' (after) '.\path\filename width="size"'.

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\".\\ref\\mini_pj01.png\" width=800>"
+    "<img src=\"./ref/mini_pj01.png\" width=\"800\">"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj02.png\" width=800>"
+    "<img src=\"./ref/mini_pj02.png\" width=\"800\">"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj03.png\" width=800>"
+    "<img src=\"./ref/mini_pj03.png\" width=\"800\">"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj04.png\" width=800>"
+    "<img src=\"./ref/mini_pj04.png\" width=\"800\">"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj05.png\" width=800>"
+    "<img src=\"./ref/mini_pj05.png\" width=\"800\">"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj06.png\" width=800>"
+    "<img src=\"./ref/mini_pj06.png\" width=\"800\">"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj07.png\" width=800>"
+    "<img src=\"./ref/mini_pj07.png\" width=\"800\">"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj08.png\" width=800>"
+    "<img src=\"./ref/mini_pj08.png\" width=\"800\">"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj09.png\" width=800>"
+    "<img src=\"./ref/mini_pj09.png\" width=\"800\">"
    ]
   },
   {
@@ -186,13 +186,6 @@
     "6. 5에서 추출한 파라미터값과 domain을 조합하여 원하는 페이지로 이동한다.\n",
     "7. 이동한 웹페이지에서 원하는 영역을 추출하여 적재한다."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
