edit mini_project crawling with selenium @ https://dart.fss.or.kr

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -31,8 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 문서목차와 목차에 대한 세부내용이 표시됨\n",
-    "  - 이 때 세부내용은 iframe으로 구성되어 있음\n",
+    "---\n",
+    "- 팝업창에는 목차와 세부내용이 표시됨\n",
+    "  - 세부내용은 iframe으로 구성되어 있음\n",
     "  - 목차에서 다른 내용을 선택하더라도 팝업창에 표시된 url은 변동 없음"
    ]
   },
@@ -47,6 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "- 원하는 내용에 대한 html을 살펴보면 작동할만한 link url이 확인되지 않음\n",
     "  - 바로 상위에 있는 a태그의 href속성에 \"#\"값이 할당되어 있음"
    ]
@@ -186,6 +188,152 @@
     "6. 5에서 추출한 파라미터값과 domain을 조합하여 원하는 페이지로 이동한다.\n",
     "7. 이동한 웹페이지에서 원하는 영역을 추출하여 적재한다."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import modules\n",
+    "from selenium import webdriver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# chromedriver\n",
+    "ch_driver = webdriver.Chrome(\"C://Anaconda3/chromedriver.exe\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the url\n",
+    "domain = \"https://dart.fss.or.kr\"\n",
+    "ch_driver.get(domain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input the stock name\n",
+    "stock_name = \"삼성전자\"\n",
+    "input_box = ch_driver.find_element_by_id(\"textCrpNm\")\n",
+    "input_box.send_keys(stock_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 정기공시 유형모음 버튼 확장\n",
+    "ch_driver.find_element_by_id(\"publicTypeButton_01\").click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 사업보고서(publicType1), 반기보고서(publicType2), 분기보고서 선택(publicType3)\n",
+    "for i in range(1, 3+1):\n",
+    "    element = ch_driver.find_element_by_id(\"publicType{report_num}\".format(report_num=i))\n",
+    "    element.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 검색시작일 설정\n",
+    "start_date = 20180101\n",
+    "start_date_box = ch_driver.find_element_by_id(\"startDate\")\n",
+    "start_date_box.clear()\n",
+    "start_date_box.send_keys(start_date)\n",
+    "\n",
+    "# 입력한 값이 없습니다. 오류 창 팝업 시 해제하기\n",
+    "# ch_driver.find_element_by_xpath('//*[@id=\"ext-comp-1016\"]/tbody/tr/td[2]').click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 검색종료일 설정\n",
+    "end_date = 20181220\n",
+    "end_date_box = ch_driver.find_element_by_id(\"endDate\")\n",
+    "end_date_box.clear()\n",
+    "end_date_box.send_keys(end_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# click the search button\n",
+    "search_btn_xpath = '//*[@id=\"searchForm\"]/fieldset/p[4]/input'\n",
+    "search_btn = ch_driver.find_element_by_xpath(search_btn_xpath)\n",
+    "search_btn.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 보고서 목록 가져오기\n",
+    "articles_xpath = '//*[@id=\"listContents\"]/div[1]/table/tbody/tr'\n",
+    "article_elements = ch_driver.find_elements_by_xpath(articles_xpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20181114001530\n",
+      "http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20180814001113\n",
+      "http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20180515001699\n",
+      "http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20180402005019\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 보고서 목록에서 보고서 링크 추출하기\n",
+    "for content in article_elements:\n",
+    "    print(content.find_elements_by_tag_name('a')[-1].get_attribute('href'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -204,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
