--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# chromedriver\n",
-    "ch_driver = webdriver.Chrome(\"C://Anaconda3/chromedriver.exe\")"
+    "ch_driver = webdriver.Chrome(\"D://Anaconda3/chromedriver.exe\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -324,8 +324,73 @@
    ],
    "source": [
     "# 보고서 목록에서 보고서 링크 추출하기\n",
+    "report_links = []\n",
     "for content in article_elements:\n",
-    "    print(content.find_elements_by_tag_name('a')[-1].get_attribute('href'))"
+    "    print(content.find_elements_by_tag_name('a')[-1].get_attribute('href'))\n",
+    "    report_links.append(content.find_elements_by_tag_name('a')[-1].get_attribute('href'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20181114001530',\n",
+       " 'http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20180814001113',\n",
+       " 'http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20180515001699',\n",
+       " 'http://dart.fss.or.kr/dsaf001/main.do?rcpNo=20180402005019']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "report_links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 첫번째 리포트 호출\n",
+    "ch_driver.get(report_links[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 첫번째 리포트에서 연결재무제표 페이지로 전환\n",
+    "ch_driver.find_element_by_partial_link_text(\"2. 연결재무제표\").click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 내용을 담고 있는 iframe의 xpath 추출\n",
+    "iframe = ch_driver.find_element_by_xpath('//*[@id=\"ifrm\"]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# switch frame을 통한 iframe 접근\n",
+    "ch_driver.switch_to.frame(iframe)"
    ]
   },
   {
@@ -352,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
