edit Mini Project ipynb add mini project template

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -132,7 +132,8 @@
     "- postman에 대입하여 원하는 내용이 제약없이 반환되는지 확인해보자.<br>\n",
     "  → 잘 반환되는 것을 확인할 수 있다.\n",
     "  - 또한, 총 6개의 파라미터가 존재하는 것을 확인할 수 있다. <br>\n",
-    "    (rcpNo, dcmNo, eleId, offset, length, dtd)"
+    "    (rcpNo, dcmNo, eleId, offset, length, dtd)<br>\n",
+    "    (접수번호, "
    ]
   },
   {
@@ -188,6 +189,66 @@
     "6. 5에서 추출한 파라미터값과 domain을 조합하여 원하는 페이지로 이동한다.\n",
     "7. 이동한 웹페이지에서 원하는 영역을 추출하여 적재한다."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mini Projdct (최익창)\n",
+    "\n",
+    "\n",
+    "## 주제 : 전자공시시스템 정기 보고서(사업/반기/분기보고서) 크롤링\n",
+    "\n",
+    "### 동기 : 관심기업의 공시 재무정보 추출을 통한 투자 기초자료 DB화\n",
+    "\n",
+    "### 사용한 라이브러리\n",
+    "- selenium\n",
+    "- requests\n",
+    "- bs4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Code Start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 느낀 점\n",
+    "\n",
+    "### 어려웠던 점\n",
+    "1. Lorem Ipsum\n",
+    "2. Lorem Ipsum\n",
+    "3. Lorem Ipsum\n",
+    "\n",
+    "### 보완할 부분\n",
+    "\n",
+    "### 소감\n",
+    "\n",
+    "(더블클릭하시면 수정 가능합니다.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
