edit finally mini project this is really final version of proejct :)

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -184,20 +184,21 @@
     "    # 연결재무제표 값을 갖고 있는 iframe으로 접근\n",
     "    iframe = ch_driver.find_element_by_xpath('//*[@id=\"ifrm\"]')\n",
     "    ch_driver.switch_to.frame(iframe)\n",
-    "    # 현금흐름표 헤더 추출\n",
+    "    # 현금흐름표 헤더 element 및 text 추출\n",
     "    cashflow_header_xpath = '/html/body/table[not(@class=\"nb\")][position()=last()]/thead/tr/th'\n",
     "    cashflow_header = ch_driver.find_elements_by_xpath(cashflow_header_xpath)\n",
     "    header_list = []\n",
     "    for header in cashflow_header:\n",
     "        header_list.append(header.text)\n",
-    "    # 현금흐름표 본문 추출\n",
+    "    # 현금흐름표 본문 추출(1) : tr element 추출\n",
     "    cashflow_infos_xpath = '/html/body/table[not(@class=\"nb\")][position()=last()]/tbody/tr'\n",
     "    cashflow_infos = ch_driver.find_elements_by_xpath(cashflow_infos_xpath)\n",
-    "    # 아래는 추가입니다.\n",
     "    cashflow_info_list = []\n",
+    "    # 현금흐름표 본문 추출(2) : tr 내 td element 추출\n",
     "    for item in cashflow_infos:\n",
     "        cashflow_infos_tds = item.find_elements_by_tag_name(\"td\")\n",
     "        temp_tds_list = []\n",
+    "    # 현금흐름표 본문 추출(3) : td element의 text 추출 > 값이 없으면 0으로 처리, 숫자형 문자는 int로 변환    \n",
     "        for td in cashflow_infos_tds:\n",
     "            temp_value = \"0\" if td.text == '' else td.text\n",
     "            temp_tds_list.append(temp_value)\n",
