final final final real final some comments modified.

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -485,8 +485,7 @@
     "- postman에 대입하여 원하는 내용이 제약없이 반환되는지 확인해보자.<br>\n",
     "  → 잘 반환되는 것을 확인할 수 있다.\n",
     "  - 또한, 총 6개의 파라미터가 존재하는 것을 확인할 수 있다. <br>\n",
-    "    (rcpNo, dcmNo, eleId, offset, length, dtd)<br>\n",
-    "    (접수번호, "
+    "    (rcpNo, dcmNo, eleId, offset, length, dtd)<br>"
    ]
   },
   {
