--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -161,6 +161,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./ref/mini_pj10.png\" width=\"600\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
