image align image left align

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./ref/mini_pj10.png\" width=\"600\">"
+    "<img align=\"left\" src=\"./ref/mini_pj10.png\" width=\"600\">"
    ]
   },
   {
