add one image add target image

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -216,6 +216,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img align=\"left\" src=\"./ref/mini_pj11.png\" width=\"600\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 214,
    "metadata": {},
