edit some stuffs what has changed?..

--- a/181222_MiniProject_Crawling.ipynb
+++ b/181222_MiniProject_Crawling.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,189 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[['', '제 50 기 3분기', '제 49 기 3분기'],\n",
-       "  [['영업활동 현금흐름', 44603783, 40470495],\n",
-       "   ['영업에서 창출된 현금흐름', 53748492, 44949562],\n",
-       "   ['당기순이익', 35882671, 29931616],\n",
-       "   ['조정', 34137314, 26755486],\n",
-       "   ['영업활동으로 인한 자산부채의 변동', -16271493, -11737540],\n",
-       "   ['이자의 수취', 1273834, 1314082],\n",
-       "   ['이자의 지급', -367706, -421908],\n",
-       "   ['배당금 수입', 187765, 145706],\n",
-       "   ['법인세 납부액', -10238602, -5516947],\n",
-       "   ['투자활동 현금흐름', -36477265, -31057350],\n",
-       "   ['단기금융상품의 순(증가)감소', -9026701, 11124497],\n",
-       "   ['단기매도가능금융자산의 순증가', 0, -144767],\n",
-       "   ['단기상각후원가금융자산의 순증가', -337625, 0],\n",
-       "   ['장기금융상품의 처분', 254855, 49326],\n",
-       "   ['장기금융상품의 취득', -2782949, -780287],\n",
-       "   ['장기매도가능금융자산의 처분', 0, 177804],\n",
-       "   ['장기매도가능금융자산의 취득', 0, -218976],\n",
-       "   ['상각후원가금융자산의 취득', -158716, 0],\n",
-       "   ['기타포괄손익-공정가치금융자산의 처분', 9789, 0],\n",
-       "   ['기타포괄손익-공정가치금융자산의 취득', -417447, 0],\n",
-       "   ['당기손익-공정가치금융자산의 처분', 49283, 0],\n",
-       "   ['당기손익-공정가치금융자산의 취득', -124002, 0],\n",
-       "   ['관계기업 및 공동기업 투자의 처분', 148, 356608],\n",
-       "   ['관계기업 및 공동기업 투자의 취득', -17564, -19510],\n",
-       "   ['유형자산의 처분', 392768, 137230],\n",
-       "   ['유형자산의 취득', -23715834, -32355245],\n",
-       "   ['무형자산의 처분', 10004, 945],\n",
-       "   ['무형자산의 취득', -676612, -595846],\n",
-       "   ['사업결합으로 인한 현금유출액', -30463, -8673260],\n",
-       "   ['현금의 기타유출입', 93801, -115869],\n",
-       "   ['재무활동 현금흐름', -5689077, -10444988],\n",
-       "   ['단기차입금의 순증가', 3198153, 1823920],\n",
-       "   ['자기주식의 취득', -875111, -6317621],\n",
-       "   ['사채 및 장기차입금의 차입', 3474, 976842],\n",
-       "   ['사채 및 장기차입금의 상환', -270317, -1139177],\n",
-       "   ['배당금 지급', -7748461, -5806602],\n",
-       "   ['비지배지분의 증감', 3185, 17650],\n",
-       "   ['외화환산으로 인한 현금의 변동', 105522, -291373],\n",
-       "   ['현금 및 현금성자산의 증가(감소)', 2542963, -1323216],\n",
-       "   ['기초 현금 및 현금성자산', 30545130, 32111442],\n",
-       "   ['기말 현금 및 현금성자산', 33088093, 30788226]]],\n",
-       " [['', '제 50 기 반기', '제 49 기 반기'],\n",
-       "  [['영업활동 현금흐름', 29054126, 23023433],\n",
-       "   ['영업에서 창출된 현금흐름', 36297976, 26735306],\n",
-       "   ['당기순이익', 22731956, 18738205],\n",
-       "   ['조정', 21907443, 16849218],\n",
-       "   ['영업활동으로 인한 자산부채의 변동', -8341423, -8852117],\n",
-       "   ['이자의 수취', 779529, 855926],\n",
-       "   ['이자의 지급', -208024, -234578],\n",
-       "   ['배당금 수입', 156669, 116632],\n",
-       "   ['법인세 납부액', -7972024, -4449853],\n",
-       "   ['투자활동 현금흐름', -19555075, -16102722],\n",
-       "   ['단기금융상품의 순감소', 1212089, 14228691],\n",
-       "   ['단기매도가능금융자산의 처분', 0, 141491],\n",
-       "   ['단기상각후원가금융자산의 취득', -617411, 0],\n",
-       "   ['장기금융상품의 처분', 116265, 18427],\n",
-       "   ['장기금융상품의 취득', -1571571, -632632],\n",
-       "   ['장기매도가능금융자산의 처분', 0, 158960],\n",
-       "   ['장기매도가능금융자산의 취득', 0, -149752],\n",
-       "   ['상각후원가금융자산의 취득', -158716, 0],\n",
-       "   ['기타포괄손익-공정가치금융자산의 처분', 2230, 0],\n",
-       "   ['기타포괄손익-공정가치금융자산의 취득', -317963, 0],\n",
-       "   ['당기손익-공정가치금융자산의 처분', 33536, 0],\n",
-       "   ['당기손익-공정가치금융자산의 취득', -78004, 0],\n",
-       "   ['관계기업 및 공동기업 투자의 처분', 148, 356087],\n",
-       "   ['관계기업 및 공동기업 투자의 취득', -17137, -12850],\n",
-       "   ['유형자산의 처분', 318599, 74551],\n",
-       "   ['유형자산의 취득', -18102717, -21144265],\n",
-       "   ['무형자산의 처분', 10004, 889],\n",
-       "   ['무형자산의 취득', -477055, -410758],\n",
-       "   ['사업결합으로 인한 현금유출액', -19140, -8624973],\n",
-       "   ['현금의 기타유출입', 111768, -106588],\n",
-       "   ['재무활동 현금흐름', -9320446, -9171406],\n",
-       "   ['단기차입금의 순(감소)증가', -2845304, 289091],\n",
-       "   ['자기주식의 취득', -875111, -4214232],\n",
-       "   ['사채 및 장기차입금의 차입', 3410, 692445],\n",
-       "   ['사채 및 장기차입금의 상환', -267750, -1121754],\n",
-       "   ['배당금 지급', -5338747, -4823973],\n",
-       "   ['비지배지분의 증감', 3056, 7017],\n",
-       "   ['외화환산으로 인한 현금의 변동', 638487, -853661],\n",
-       "   ['현금 및 현금성자산의 증가(감소)', 817092, -3104356],\n",
-       "   ['기초 현금 및 현금성자산', 30545130, 32111442],\n",
-       "   ['기말 현금 및 현금성자산', 31362222, 29007086]]],\n",
-       " [['', '제 50 기 1분기', '제 49 기 1분기'],\n",
-       "  [['영업활동 현금흐름', 15616352, 10597271],\n",
-       "   ['영업에서 창출된 현금흐름', 16026531, 12382781],\n",
-       "   ['당기순이익', 11688544, 7684354],\n",
-       "   ['조정', 11140508, 7909512],\n",
-       "   ['영업활동으로 인한 자산부채의 변동', -6802521, -3211085],\n",
-       "   ['이자의 수취', 331422, 378987],\n",
-       "   ['이자의 지급', -89829, -92981],\n",
-       "   ['배당금 수입', 28754, 27227],\n",
-       "   ['법인세 납부액', -680526, -2098743],\n",
-       "   ['투자활동 현금흐름', -7373336, -8165139],\n",
-       "   ['단기금융상품의 순감소(증가)', 3472296, 10082810],\n",
-       "   ['단기매도가능금융자산의 취득', 0, -544463],\n",
-       "   ['매도가능금융자산의 처분', -411752, 0],\n",
-       "   ['장기금융상품의 처분', 84373, 10153],\n",
-       "   ['장기금융상품의 취득', -455778, -86835],\n",
-       "   ['장기매도가능금융자산의 처분', 0, 53041],\n",
-       "   ['장기매도가능금융자산의 취득', 0, -28847],\n",
-       "   ['상각후원가금융자산의 취득', -158716, 0],\n",
-       "   ['기타포괄손익-공정가치금융자산의 처분', 2083, 0],\n",
-       "   ['기타포괄손익-공정가치금융자산의 취득', -31911, 0],\n",
-       "   ['당기손익-공정가치금융자산의 처분', 9968, 0],\n",
-       "   ['당기손익-공저가치금융자산의 취득', -34587, 0],\n",
-       "   ['관계기업 및 공동기업 투자의 처분', 148, 76522],\n",
-       "   ['관계기업 및 공동기업 투자의 취득', -17137, -4160],\n",
-       "   ['유형자산의 처분', 200057, 35250],\n",
-       "   ['유형자산의 취득', -9818105, -8901692],\n",
-       "   ['무형자산의 처분', 5272, 47],\n",
-       "   ['무형자산의 취득', -234228, -171098],\n",
-       "   ['사업결합으로 인한 현금유출액', -14721, -8624973],\n",
-       "   ['현금의 기타유출입', 29402, -60894],\n",
-       "   ['재무활동 현금흐름', -6929313, -5188892],\n",
-       "   ['단기차입금의 순증가(감소)', -5793171, -3575834],\n",
-       "   ['자기주식의 취득', -875111, -2045795],\n",
-       "   ['사채 및 장기차입금의 차입', 3157, 434803],\n",
-       "   ['사채 및 장기차입금의 상환', -264947, -2042],\n",
-       "   ['배당금 지급', -3272, -218],\n",
-       "   ['비지배지분의 증감', 4031, 194],\n",
-       "   ['외화환산으로 인한 현금의 변동', 444919, -1791744],\n",
-       "   ['현금 및 현금성자산의 순증가(감소)', 1758622, -4548504],\n",
-       "   ['기초 현금 및 현금성자산', 30545130, 32111442],\n",
-       "   ['기말 현금 및 현금성자산', 32303752, 27562938]]],\n",
-       " [['', '제 49 기', '제 48 기', '제 47 기'],\n",
-       "  [['영업활동 현금흐름', 62162041, 47385644, 40061761],\n",
-       "   ['영업에서 창출된 현금흐름', 67777432, 52299610, 43989083],\n",
-       "   ['당기순이익', 42186747, 22726092, 19060144],\n",
-       "   ['조정', 36211232, 30754471, 29610971],\n",
-       "   ['영업활동으로 인한 자산부채의 변동', -10620547, -1180953, -4682032],\n",
-       "   ['이자의 수취', 1581117, 1405085, 2151741],\n",
-       "   ['이자의 지급', -542715, -443838, -748256],\n",
-       "   ['배당금 수입', 173305, 256851, 266369],\n",
-       "   ['법인세 납부액', -6827098, -6132064, -5597176],\n",
-       "   ['투자활동 현금흐름', -49385216, -29658675, -27167787],\n",
-       "   ['단기금융상품의 순감소(증가)', 387627, -6780610, -5762783],\n",
-       "   ['단기매도가능금융자산의 처분', 499856, 3010003, 2143384],\n",
-       "   ['단기매도가능금융자산의 취득', 0, -2129551, -509349],\n",
-       "   ['장기금융상품의 처분', 1750221, 789862, 3999710],\n",
-       "   ['장기금융상품의 취득', -1079355, -1741547, -132733],\n",
-       "   ['장기매도가능금융자산의 처분', 191826, 2010356, 200502],\n",
-       "   ['장기매도가능금융자산의 취득', -358497, -1498148, -232530],\n",
-       "   ['만기보유금융자산의 취득', -106751, 0, 0],\n",
-       "   ['관계기업 및 공동기업 투자의 처분', 355926, 2280203, 278009],\n",
-       "   ['관계기업 및 공동기업 투자의 취득', -25293, -84306, -137917],\n",
-       "   ['유형자산의 처분', 308354, 270874, 357154],\n",
-       "   ['유형자산의 취득', -42792234, -24142973, -25880222],\n",
-       "   ['무형자산의 처분', 733, 6944, 1083],\n",
-       "   ['무형자산의 취득', -983740, -1047668, -1501881],\n",
-       "   ['사업결합으로 인한 현금유출액', -8754268, -622050, -411445],\n",
-       "   ['사업양도로 인한 현금유입액', 1248834, 0, 0],\n",
-       "   ['현금의 기타유출입', -28455, 19936, 421231],\n",
-       "   ['재무활동 현금흐름', -12560867, -8669514, -6573509],\n",
-       "   ['단기차입금의 순증가(감소)', 2730676, 1351037, 3202416],\n",
-       "   ['자기주식의 취득', -8350424, -7707938, -5015112],\n",
-       "   ['자기주식의 처분', 0, 0, 3034],\n",
-       "   ['사채 및 장기차입금의 차입', 998311, 1041743, 192474],\n",
-       "   ['사채 및 장기차입금의 상환', -1140803, -252846, -1801465],\n",
-       "   ['배당금 지급', -6804297, -3114742, -3129544],\n",
-       "   ['비지배지분의 증감', 5670, 13232, -25312],\n",
-       "   ['환율변동효과 반영전 현금및현금성자산의 순증가(감소)', 215958, 9057455, 6320465],\n",
-       "   ['외화환산으로 인한 현금의 변동', -1782270, 417243, -524487],\n",
-       "   ['현금 및 현금성자산의 순증가(감소)', -1566312, 9474698, 5795978],\n",
-       "   ['기초 현금 및 현금성자산', 32111442, 22636744, 16840766],\n",
-       "   ['기말 현금 및 현금성자산', 30545130, 32111442, 22636744]]]]"
+       "['당기순이익', 35882671, 29931616]"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# output\n",
-    "result_list"
+    "result_list[0][1][2]"
    ]
   },
   {
